--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/big_event
 spring.datasource.username=user
 spring.datasource.password=user
+
+# Auto transfer underscore to camel case from database column name to class property
+mybatis.configuration.map-underscore-to-camel-case=true
