--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=user
 
 # Auto transfer underscore to camel case from database column name to class property
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# Redis connection string
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
